@@ -28,7 +28,11 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
             'com.opencsv:opencsv:5.1'
+
     )
+
+
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 
     testImplementation(
             'org.junit.jupiter:junit-jupiter:5.6.0',
@@ -39,6 +43,7 @@ dependencies {
     testRuntimeOnly(
             'org.testfx:openjfx-monocle:jdk-11+26',
     )
+    implementation 'junit:junit:4.12'
 }
 
 javafx {
@@ -46,6 +51,16 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+    ]
+}
 
 test {
     useJUnitPlatform()
@@ -63,6 +78,8 @@ jar {
 def codeCoverageExcludes = [
         'edu.wpi.N.App',
         'edu.wpi.N.Main',
+        'edu.wpi.N.entities.*',
+        'edu.wpi.N.views.*'
 ]
 
 jacoco {
